[package]
name = "demosuperimpose-goldsrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
hldemo = {git = "https://github.com/YaLTeR/hldemo-rs.git"}
nom = "7.1.3"
serde = "1.0.188"
