[package]
name = "demosuperimpose-goldsrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
bsp_file = { package = "file", path = "./hlbsp-viewer/file" }
bsp_render = { package = "render", path = "./hlbsp-viewer/render" }
hldemo = {git = "https://github.com/YaLTeR/hldemo-rs.git"}
nom = "7.1.3"
rand = "0.8.5"
rayon = "1.8.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.106"
